codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_hardcoded_only.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
assertion_line: 135
expression: status_line_popup_snapshot(&mut chat)
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search
  >
› [x] project-name          Project name (omitted when unavailable)
  [x] git-branch            Current Git branch (omitted when unavailable)
  [x] thread-title          Current thread title (omitted when unavailable)
  [ ] model                 Current model name
  [ ] model-with-reasoning  Current model name with reasoning level
  [ ] current-dir           Current working directory
  [ ] pull-request-number   Open pull request number for the current branch (omitted when unavail…
  [ ] branch-changes        Committed branch changes against the default branch (omitted when una…

  my-project · feat/awesome-feature · thread title
  Use ↑↓ to navigate, ←→ to move, space to select, enter to confirm, esc to cancel.
